Bug 1248183 - Block accelerated canvas2d on Vivante GC1000 GPUs; r=snorp

--HG--
extra : transplant_source : %16%0Av%C8%7F%1F%1E%F0p%D6%A0%E0p%83%C5%A0%EF%D3%16%E0